--- a/assets/css/modules.css
+++ b/assets/css/modules.css
@@ -212,7 +212,7 @@ ul {
     color: #fff !important;
     text-decoration: none;
     padding: 0.75em 2.5em 0.75em 2.5em;
-    background-color: #547AA5;
+    background-color: #5497A7;
     border: 0;
     cursor: pointer;
     background-image: -moz-linear-gradient(
